add db context in Models and create dao for Users

--- a/CashOnline.Web/CashOnline.Web.csproj
+++ b/CashOnline.Web/CashOnline.Web.csproj
@@ -252,6 +252,12 @@
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CashOnline.Models\CashOnline.Models.csproj">
+      <Project>{9341759e-cc01-4940-b745-ebe241553f52}</Project>
+      <Name>CashOnline.Models</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
