--- a/CashOnline.Web/bin/CashOnline.Web.dll.config
+++ b/CashOnline.Web/bin/CashOnline.Web.dll.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-CashOnline.Web-20200701121832.mdf;Initial Catalog=aspnet-CashOnline.Web-20200701121832;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="CashOnlineDbContext" connectionString="data source=.;initial catalog=CashOnlineDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
